--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -51,16 +51,6 @@
             },
             "multilineDetection": "brackets"
         }],
-        "no-restricted-imports": [
-            "error", {
-                "paths": [
-                    {
-                        "name": "next/image",
-                        "message": "Use next/future/image instead."
-                    }
-                ]
-            }
-        ],
         "import/newline-after-import": "error",
         "import/no-duplicates": "error",
         "import/first": "error",
@@ -82,7 +72,7 @@
                         "position": "after"
                     },
                     {
-                        "pattern": "next/**",
+                        "pattern": "next/*",
                         "group": "builtin",
                         "position": "after"
                     }
@@ -105,13 +95,6 @@
             "files": ["*.stories.tsx"],
             "rules": {
                 "import/exports-last": "off"
-            }
-        },
-        {
-            "files": ["next.config.js"],
-            "rules": {
-                "@typescript-eslint/no-var-requires": "off",
-                "import/order": "off"
             }
         }
     ]
