--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,5 +77,8 @@
         "stylelint-config-standard": "^28.0.0",
         "typescript": "^4.4.2",
         "webpack": "5"
-    }
+    },
+    "browserslist": [
+        "last 2 versions and not dead and >= 1% and supports async-functions"
+    ]
 }
