--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,8 @@
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
         "dequal": "^2.0.2",
-        "diff": "^5.1.0",
         "downshift": "^6.1.7",
+        "fast-myers-diff": "^3.0.1",
         "framer-motion": "^6.3.5",
         "is-dark-color": "^1.2.0",
         "next": "^12.1.6",
