--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
         run: cd backend && poetry run python3 ./manage.py runserver > /dev/null 2>&1 &
 
       - name: Install frontend dependencies
-        run: cd frontend && yarn
+        run: cd frontend && yarn --frozen-lockfile
 
       - name: Build frontend
         run: cd frontend && yarn build
@@ -155,7 +155,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: reviewdog/action-setup@v1
-      - run: cd frontend && yarn
+      - run: cd frontend && yarn --frozen-lockfile
       - run: reviewdog -reporter=github-check
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -167,7 +167,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - run: cd frontend && yarn
+      - run: cd frontend && yarn --frozen-lockfile
       - run: cd frontend && yarn lint
   mypy:
     name: mypy
