--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,10 @@ PyGithub = "^1.55"
 drf-extensions = "^0.7.1"
 tqdm = "^4.62.3"
 tzdata = "^2022.1"
+Pillow = "^9.2.0"
+html-json-forms = "^1.1.1"
+django-resized = "^1.0.2"
+django-cleanup = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
