--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,6 +20,9 @@ server {
     location /static {
         try_files $uri @proxy_api;
     }
+    location /media {
+        root /;
+    }
 
     location @proxy_api {
         proxy_set_header X-Forwarded-Proto https;
