--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -8,7 +8,7 @@ disallow_untyped_calls = True
 disallow_untyped_decorators = True
 ignore_errors = False
 ignore_missing_imports = True
-follow_imports = silent
+#follow_imports = silent
 implicit_reexport = False
 strict_optional = True
 strict_equality = True
@@ -28,6 +28,8 @@ files =
 plugins =
     mypy_django_plugin.main,
     mypy_drf_plugin.main
+
+mypy_path = $MYPY_CONFIG_FILE_DIR
 
 [mypy.plugins.django-stubs]
 django_settings_module = decompme.settings
