--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
         "@svgr/webpack": "^6.2.1",
         "@types/diff": "^5.0.2",
         "@types/react-modal": "^3.13.1",
+        "@types/react-timeago": "^4.1.3",
         "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@types/react-window": "^1.8.5",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
