--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,8 @@
     "[python]": {
         "editor.formatOnSave": true,
     },
+    "files.associations": {
+        "*.spec": "python",
+    },
     "python.formatting.provider": "black",
 }
