--- a/backend/docker.dev.env
+++ b/backend/docker.dev.env
@@ -5,5 +5,6 @@ ALLOWED_HOSTS="backend,localhost,127.0.0.1"
 USE_SANDBOX_JAIL="on"
 SANDBOX_DISABLE_PROC="true"
 COMPILER_BASE_PATH=/compilers
-LOCAL_FILE_DIR=/local_files
-MEDIA_DIR: /media
+LOCAL_FILE_DIR=/backend/local_files
+MEDIA_DIR=/backend/media
+MEDIA_URL=http://localhost/media/
