--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
     volumes:
     - ./backend:/backend
     - ./local_files:/local_files
+    - ./media:/media
     tmpfs:
     # Use a separate tmpfs to prevent a rogue jailed process
     # from filling /tmp on the parent container
@@ -58,4 +59,4 @@ services:
     - "80:80"
     volumes:
     - ./nginx:/etc/nginx/conf.d
-    - ./backend/media:/media
+    - ./media:/media
