--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,6 @@ services:
       - seccomp=unconfined
     volumes:
     - ./backend:/backend
-    - ./local_files:/local_files
-    - ./media:/media
     tmpfs:
     # Use a separate tmpfs to prevent a rogue jailed process
     # from filling /tmp on the parent container
@@ -59,4 +57,4 @@ services:
     - "80:80"
     volumes:
     - ./nginx:/etc/nginx/conf.d
-    - ./media:/media
+    - ./backend/media:/media
