few tweaks to help docker (#550)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,6 @@ services:
       - seccomp=unconfined
     volumes:
     - ./backend:/backend
-    - ./local_files:/local_files
-    - ./media:/media
     tmpfs:
     # Use a separate tmpfs to prevent a rogue jailed process
     # from filling /tmp on the parent container
@@ -47,6 +45,7 @@ services:
     environment:
       API_BASE: http://localhost/api
       INTERNAL_API_BASE: http://backend:8000/api
+      FRONTEND_USE_IMAGE_PROXY: "false"
     ports:
     - "8080:8080"
     volumes:
@@ -58,4 +57,4 @@ services:
     - "80:80"
     volumes:
     - ./nginx:/etc/nginx/conf.d
-    - ./media:/media
+    - ./backend/media:/media
