Projects list, creation, settings pages (#542)
* add projects list

* new project page

* mypy

* allow '.' in github identifiers

* implement project create

* project settings

* disallow anons from being project members

* uploadable project icon

* docker attempt

* fix tests

* add tests

* add description form

* refactor to add useEntity and FieldSet

* move FieldSet out of subdirectory

* use same page for project tabs

* scroll up to UnderlineNav when tab changes

* stylelint

* configure vscode mypy extension

* mypy

* fix mypy and dmypy

dmypy does not support follow_imports=silent. Instead we explicitly
disable most checks for asm_differ and m2c, which
has the same effect

* remove redundant mypy flags

* FieldSet style tweaks

* give UnderlineNav horiz padding

* fix swr mutate of project header

* few tweaks to help docker (#550)

* eth changes

* use POST/DELETE rather than PUT for project members

* add migration

* fix pr creation

* simplify project platform derivation

Co-authored-by: Mark Street <22226349+mkst@users.noreply.github.com>
Co-authored-by: Ethan Roseman <ethteck@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,6 @@ services:
       - seccomp=unconfined
     volumes:
     - ./backend:/backend
-    - ./local_files:/local_files
     tmpfs:
     # Use a separate tmpfs to prevent a rogue jailed process
     # from filling /tmp on the parent container
@@ -46,6 +45,7 @@ services:
     environment:
       API_BASE: http://localhost/api
       INTERNAL_API_BASE: http://backend:8000/api
+      FRONTEND_USE_IMAGE_PROXY: "false"
     ports:
     - "8080:8080"
     volumes:
@@ -57,3 +57,4 @@ services:
     - "80:80"
     volumes:
     - ./nginx:/etc/nginx/conf.d
+    - ./backend/media:/media
