--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ __pycache__
 node_modules
 build
 .snowpack
-local_files/
 backend/local_files/
+backend/media/
 backend/virtualenvs/
 backend/docker.dev.env
 postgres/
