--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,19 @@
         "analyze": "ANALYZE=true next build"
     },
     "dependencies": {
-        "@codemirror/basic-setup": "^0.20.0",
-        "@codemirror/lang-cpp": "^0.20.0",
-        "@codemirror/next": "^0.16.0",
+        "@codemirror/commands": "^6.1.2",
+        "@codemirror/lang-cpp": "^6.0.2",
+        "@codemirror/language": "^6.3.1",
+        "@codemirror/lint": "^6.1.0",
+        "@codemirror/search": "^6.2.3",
+        "@codemirror/state": "^6.1.4",
+        "@codemirror/view": "^6.7.0",
         "@primer/octicons-react": "^17.2.0",
         "@react-hook/resize-observer": "^1.2.2",
-        "@replit/codemirror-indentation-markers": "^0.20.0",
+        "@replit/codemirror-indentation-markers": "^6.1.0",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
+        "codemirror": "^6.0.1",
         "dequal": "^2.0.2",
         "downshift": "^6.1.7",
         "fast-myers-diff": "^3.0.1",
@@ -26,14 +31,14 @@
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.6.0",
         "next-translate": "^1.6.0",
-        "react": "^18.0.0",
+        "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.6",
-        "react-dom": "^18.0.0",
+        "react-dom": "^18.2.0",
         "react-laag": "^2.0.4",
         "react-modal": "^3.14.4",
         "react-simple-resizer": "^2.1.0",
-        "react-timeago": "^6.2.1",
+        "react-timeago": "^7.1.0",
         "react-virtualized-auto-sizer": "^1.0.6",
         "react-window": "^1.8.6",
         "sass": "^1.42.1",
@@ -47,7 +52,7 @@
         "@babel/core": "^7.17.8",
         "@next/bundle-analyzer": "^12.3.0",
         "@next/eslint-plugin-next": "^12.1.6",
-        "@svgr/webpack": "^6.2.1",
+        "@svgr/webpack": "^6.5.1",
         "@types/diff": "^5.0.2",
         "@types/react-modal": "^3.13.1",
         "@types/react-timeago": "^4.1.3",
