disable next-pwa in .env

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ USE_SANDBOX_JAIL=off
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 FRONTEND_USE_IMAGE_PROXY=true
+FRONTEND_PWA=off # service worker is buggy, so this is off by default
