--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "@primer/octicons-react": "^17.2.0",
         "@react-hook/resize-observer": "^1.2.2",
         "@replit/codemirror-indentation-markers": "^6.1.0",
+        "@shopify/web-worker": "^5.0.1",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
         "codemirror": "^6.0.1",
@@ -46,7 +47,8 @@
         "swr": "^1.3.0",
         "use-debounce": "^8.0.1",
         "use-deep-compare-effect": "^1.6.1",
-        "use-persisted-state": "^0.3.3"
+        "use-persisted-state": "^0.3.3",
+        "webpack-virtual-modules": "^0.4.5"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
