upgrade to Next.js 13
Resolves #610.

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -55,8 +55,8 @@
             "error", {
                 "paths": [
                     {
-                        "name": "next/image",
-                        "message": "Use next/future/image instead."
+                        "name": "next/legacy/image",
+                        "message": "Use next/image instead."
                     }
                 ]
             }
