--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
         "fast-myers-diff": "^3.0.1",
         "framer-motion": "^6.3.5",
         "is-dark-color": "^1.2.0",
-        "next": "^12.3.0",
+        "next": "^13.0.7",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.6.0",
         "next-translate": "^1.6.0",
@@ -68,7 +68,7 @@
         "cssnano": "^5.0.7",
         "dotenv": "^16.0.1",
         "eslint": "8.16.0",
-        "eslint-config-next": "12.1.6",
+        "eslint-config-next": "^13.0.7",
         "eslint-formatter-rdjson": "^1.0.5",
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
