--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ watchdog = "^2.1.6"
 jwt = "^1.3.1"
 PyGithub = "^1.55"
 drf-extensions = "^0.7.1"
+drf-typescript-generator = { git = "https://github.com/nanaian/drf-typescript-generator.git" }
 tqdm = "^4.62.3"
 tzdata = "^2022.1"
 Pillow = "^9.2.0"
