move index to app dir and add tailwindcss

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,6 @@
         "EditorConfig.EditorConfig",
         "dbaeumer.vscode-eslint",
         "stylelint.vscode-stylelint",
+        "bradlc.vscode-tailwindcss",
     ]
 }
