--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-tailwindcss": "^3.7.1",
         "identity-obj-proxy": "^3.0.0",
         "next-remove-imports": "^1.0.6",
         "postcss": "^8.3.6",
@@ -83,6 +84,7 @@
         "stylelint": "^14.16.0",
         "stylelint-config-css-modules": "^4.1.0",
         "stylelint-config-standard": "^29.0.0",
+        "tailwindcss": "^3.2.4",
         "typescript": "^4.4.2",
         "webpack": "5"
     },
