--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,6 +85,7 @@
         "stylelint-config-css-modules": "^4.1.0",
         "stylelint-config-standard": "^29.0.0",
         "tailwindcss": "^3.2.4",
+        "tailwindcss-open-color": "^1.0.2",
         "typescript": "^4.4.2",
         "webpack": "5"
     },
