--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "analyze": "ANALYZE=true next build"
     },
     "dependencies": {
+        "@codemirror/autocomplete": "^6.4.0",
         "@codemirror/commands": "^6.1.2",
         "@codemirror/lang-cpp": "^6.0.2",
         "@codemirror/language": "^6.3.1",
@@ -16,6 +17,7 @@
         "@codemirror/search": "^6.2.3",
         "@codemirror/state": "^6.1.4",
         "@codemirror/view": "^6.7.0",
+        "@lezer/highlight": "^1.1.3",
         "@primer/octicons-react": "^17.2.0",
         "@react-hook/resize-observer": "^1.2.2",
         "@replit/codemirror-indentation-markers": "^6.1.0",
