--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Setup Python 3.9
+        uses: actions/setup-python@v1
         with:
           python-version: 3.9
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-      - run: cd backend && poetry install
-      - name: Install dependencies
+          cache: poetry
+          cache-dependency-path: backend/poetry.lock
+      - name: Install backend Python dependencies
+        run: cd backend && poetry install
+      - name: Install apt dependencies
         run: |-
           sudo dpkg --add-architecture i386
           sudo rm -f /etc/apt/sources.list.d/microsoft-prod.list
@@ -76,6 +81,7 @@ jobs:
       - name: Install wibo
         run: |-
           wget https://github.com/decompals/WiBo/releases/download/0.2.4/wibo && chmod +x wibo && sudo cp wibo /usr/bin/
+
       - name: Run backend tests
         run: |-
           mkdir -p "${WINEPREFIX}"
@@ -92,9 +98,14 @@ jobs:
       - name: Start backend
         run: cd backend && poetry run python3 ./manage.py runserver > /dev/null 2>&1 &
 
+      - name: Setup Node.js 18
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18
+          cache: yarn
+          cache-dependency-path: frontend/yarn.lock
       - name: Install frontend dependencies
         run: cd frontend && yarn --frozen-lockfile
-
       - name: Build frontend
         run: cd frontend && yarn build
 
@@ -106,9 +117,14 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Setup Python 3.9
+        uses: actions/setup-python@v1
         with:
           python-version: 3.9
+          cache: poetry
+          cache-dependency-path: backend/poetry.lock
       - name: Install Poetry
         run: pip install --user poetry
       - run: cd backend && poetry install
@@ -149,40 +165,39 @@ jobs:
             poetry install && \
             poetry run python manage.py test'
 
-  reviewdog:
-    name: reviewdog
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: reviewdog/action-setup@v1
-      - run: cd frontend && yarn --frozen-lockfile
-      - run: reviewdog -reporter=github-check
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   frontend_lint:
     name: eslint & stylelint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Setup Node.js 18
+        uses: actions/setup-node@v1
         with:
-          node-version: 14
-      - run: cd frontend && yarn --frozen-lockfile
+          node-version: 18
+          cache: yarn
+          cache-dependency-path: frontend/yarn.lock
+      - name: Install frontend dependencies
+        run: cd frontend && yarn --frozen-lockfile
       - run: cd frontend && yarn lint
+
   mypy:
     name: mypy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Setup Python 3.9
+        uses: actions/setup-python@v1
         with:
           python-version: 3.9
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+          cache: poetry
+          cache-dependency-path: backend/poetry.lock
       - run: |-
           cd backend
           poetry install
           poetry run mypy
+
   black:
     name: black
     runs-on: ubuntu-latest
