--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,19 +39,31 @@ jobs:
             "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
             $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
           sudo apt-get update -qq
+          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+
+          sudo apt-get install \
+            binutils-aarch64-linux-gnu \
+            binutils-mips-linux-gnu \
+            binutils-powerpc-linux-gnu \
+            dos2unix \
+            libprotobuf-dev \
+            libnl-route-3-dev \
+            libncurses5 \
+            protobuf-compiler \
+            wine
       - name: Install apt dependencies (cached)
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
           packages: |
-            docker-ce docker-ce-cli containerd.io docker-compose-plugin
-            binutils-aarch64-linux-gnu
-            binutils-mips-linux-gnu
-            binutils-powerpc-linux-gnu
-            dos2unix
-            libprotobuf-dev
-            libnl-route-3-dev
-            libncurses5
-            protobuf-compiler
+            docker-ce docker-ce-cli containerd.io docker-compose-plugin \
+            binutils-aarch64-linux-gnu \
+            binutils-mips-linux-gnu \
+            binutils-powerpc-linux-gnu \
+            dos2unix \
+            libprotobuf-dev \
+            libnl-route-3-dev \
+            libncurses5 \
+            protobuf-compiler \
             wine
           version: 1.0
       - name: Install nsjail
