use radix ui colors + new welcome header

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -131,7 +131,7 @@
             }
         },
         {
-            "files": ["next.config.js"],
+            "files": ["*.js"],
             "rules": {
                 "@typescript-eslint/no-var-requires": "off",
                 "import/order": "off"
