--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "@codemirror/view": "^6.7.0",
         "@lezer/highlight": "^1.1.3",
         "@primer/octicons-react": "^17.2.0",
+        "@radix-ui/colors": "^0.1.8",
         "@react-hook/resize-observer": "^1.2.2",
         "@replit/codemirror-indentation-markers": "^6.1.0",
         "@shopify/web-worker": "^5.0.1",
@@ -56,6 +57,7 @@
         "@next/bundle-analyzer": "^12.3.0",
         "@next/eslint-plugin-next": "^12.1.6",
         "@svgr/webpack": "^6.5.1",
+        "@types/": "radix-ui/colors",
         "@types/diff": "^5.0.2",
         "@types/react-modal": "^3.13.1",
         "@types/react-timeago": "^4.1.3",
@@ -86,7 +88,6 @@
         "stylelint-config-css-modules": "^4.1.0",
         "stylelint-config-standard-scss": "^6.1.0",
         "tailwindcss": "^3.2.4",
-        "tailwindcss-open-color": "^1.0.2",
         "typescript": "^4.4.2",
         "webpack": "5"
     },
