--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ Pillow = "^9.2.0"
 html-json-forms = "^1.1.1"
 django-resized = "^1.0.2"
 django-cleanup = "^6.0.0"
+dill = "^0.3.6"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
