fix CustomLayout and add Problems panel toggle
- Use allotment instead of react-simple-resizer
- Resolve #395

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "@react-hook/resize-observer": "^1.2.2",
         "@replit/codemirror-indentation-markers": "^6.1.0",
         "@shopify/web-worker": "^5.0.1",
+        "allotment": "^1.17.1",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
         "codemirror": "^6.0.1",
@@ -40,7 +41,6 @@
         "react-dom": "^18.2.0",
         "react-laag": "^2.0.4",
         "react-modal": "^3.14.4",
-        "react-simple-resizer": "^2.1.0",
         "react-timeago": "^7.1.0",
         "react-virtualized-auto-sizer": "^1.0.6",
         "react-window": "^1.8.6",
