--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
         "start": "next start --port 8080",
         "lint": "next lint && yarn stylelint 'src/**/*.css' 'src/**/*.scss'",
         "postinstall": "next telemetry disable",
-        "analyze": "ANALYZE=true next build"
+        "analyze": "ANALYZE=true next build",
+        "clean": "rm -rf .next node_modules"
     },
     "dependencies": {
         "@codemirror/autocomplete": "^6.4.0",
@@ -32,7 +33,7 @@
         "fast-myers-diff": "^3.0.1",
         "framer-motion": "^6.3.5",
         "is-dark-color": "^1.2.0",
-        "next": "^13.0.7",
+        "next": "^13.1.1",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
@@ -57,7 +58,6 @@
         "@next/bundle-analyzer": "^12.3.0",
         "@next/eslint-plugin-next": "^12.1.6",
         "@svgr/webpack": "^6.5.1",
-        "@types/": "radix-ui/colors",
         "@types/diff": "^5.0.2",
         "@types/react-modal": "^3.13.1",
         "@types/react-timeago": "^4.1.3",
@@ -71,7 +71,7 @@
         "cssnano": "^5.0.7",
         "dotenv": "^16.0.1",
         "eslint": "8.16.0",
-        "eslint-config-next": "^13.0.7",
+        "eslint-config-next": "^13.1.1",
         "eslint-formatter-rdjson": "^1.0.5",
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
@@ -88,7 +88,7 @@
         "stylelint-config-css-modules": "^4.1.0",
         "stylelint-config-standard-scss": "^6.1.0",
         "tailwindcss": "^3.2.4",
-        "typescript": "^4.4.2",
+        "typescript": "^4.9.4",
         "webpack": "5"
     },
     "browserslist": [
