use consistent env var boolean values

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
     environment:
       API_BASE: http://localhost/api
       INTERNAL_API_BASE: http://backend:8000/api
-      FRONTEND_USE_IMAGE_PROXY: "false"
+      FRONTEND_USE_IMAGE_PROXY: "off"
     ports:
     - "8080:8080"
     volumes:
