--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,17 +54,7 @@ jobs:
       - name: Install apt dependencies (cached)
         uses: awalsh128/cache-apt-pkgs-action@v1
         with:
-          packages: |
-            docker-ce docker-ce-cli containerd.io docker-compose-plugin \
-            binutils-aarch64-linux-gnu \
-            binutils-mips-linux-gnu \
-            binutils-powerpc-linux-gnu \
-            dos2unix \
-            libprotobuf-dev \
-            libnl-route-3-dev \
-            libncurses5 \
-            protobuf-compiler \
-            wine
+          packages: docker-ce docker-ce-cli containerd.io docker-compose-plugin binutils-aarch64-linux-gnu binutils-mips-linux-gnu binutils-powerpc-linux-gnu dos2unix libprotobuf-dev libnl-route-3-dev libncurses5 protobuf-compiler wine
           version: 1.0
       - name: Install nsjail
         run: |-
