--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: backend/compilers/download_cache
-          key: ${{ runner.os }}-compilers
+          key: ${{ runner.os }}-compilers3
       - name: Download compilers
         run: |-
           cd backend
