supress parameterized.expand error in event of no compilers, change TIMEOUT_SCALE_FACTOR in CI to 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,7 @@ jobs:
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
           WINEPREFIX: /tmp/wine
+          TIMEOUT_SCALE_FACTOR: 2
 
       - name: Migrate backend
         run: cd backend && poetry run python3 ./manage.py migrate
@@ -144,6 +145,7 @@ jobs:
           poetry run python manage.py test
         env:
           SYSTEM_ENV: GITHUB_WORKFLOW
+          TIMEOUT_SCALE_FACTOR: 2
 
   backend_test_docker:
     name: backend tests (docker)
@@ -171,6 +173,7 @@ jobs:
             -e LOCAL_FILE_DIR=/local_files \
             -e USE_SANDBOX_JAIL=on \
             -e SANDBOX_DISABLE_PROC=true \
+            -e TIMEOUT_SCALE_FACTOR=2 \
             decompme_backend -c 'cd /decomp.me/backend && \
             poetry install && \
             poetry run python manage.py test'
