--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,7 @@ jobs:
         run: |-
           git clone https://github.com/LLONSIT/qemu-irix-helpers && sudo cp qemu-irix-helpers/qemu/qemu-mips.conf /usr/lib/binfmt.d/ && \
           sudo systemctl restart systemd-binfmt
+          export QEMU_LD_PREFIX=$IRIX_ROOT
           wget https://github.com/n64decomp/qemu-irix/releases/download/v2.11-deb/qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
           sudo dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb
           wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && tar xpvf ido_root.tar.xz -C /tmp/
