--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,8 +101,11 @@ jobs:
           sudo dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb
           wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && tar xpvf ido_root.tar.xz -C /tmp/
           sudo mkdir -p /usr/gnemul/qemu-irix  && sudo cp -a /tmp/* /usr/gnemul/qemu-irix 
-          touch dummy.c && /tmp/ido_root/usr/bin/cc -c dummy.c
-
+          touch dummy.c && QEMU_LD_PREFIX=/usr/gnemul/qemu-irix /tmp/ido_root/usr/bin/cc -c dummy.c
+        
+        env:
+        QEMU_LD_PREFIX: /usr/gnemul/qemu-irix
+        
       - name: Run backend tests
         run: |-
           mkdir -p "${WINEPREFIX}"
