--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,11 +100,10 @@ jobs:
           wget https://github.com/n64decomp/qemu-irix/releases/download/v2.11-deb/qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
           sudo dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb
           wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && tar xpvf ido_root.tar.xz -C /tmp/
-          sudo mkdir -p /usr/gnemul/qemu-irix  && sudo cp -a /tmp/* /usr/gnemul/qemu-irix 
-          touch dummy.c && QEMU_LD_PREFIX=/usr/gnemul/qemu-irix /tmp/ido_root/usr/bin/cc -c dummy.c
+          touch dummy.c && QEMU_LD_PREFIX=/tmp/ido_root/ /tmp/ido_root/usr/bin/cc -c dummy.c
         
         env:
-            QEMU_LD_PREFIX: /usr/gnemul/qemu-irix
+            QEMU_LD_PREFIX: /tmp/ido_root
         
       - name: Run backend tests
         run: |-
