--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,6 +30,17 @@ RUN git clone "https://github.com/google/nsjail" --recursive --branch 3.1 /nsjai
     && cd /nsjail \
     && make
 
+ENV QEMU_LD_PREFIX=/tmp/ido_root
+RUN git clone "https://github.com/LLONSIT/qemu-irix-helpers" --recursive --branch master /helpers \
+    && cd /helpers && cp helpers/qemu/qemu-mips.conf /usr/lib/binfmt.d && \
+    sudo systemctl restart systemd-binfmt &&\
+    wget https://github.com/n64decomp/qemu-irix/releases/download/v2.11-deb/qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
+    dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
+    wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && tar xpvf ido_root.tar.xz -C /tmp/ &&\
+    touch dummy.c && QEMU_LD_PREFIX=/tmp/ido_root/ /tmp/ido_root/usr/bin/cc -c dummy.c && \
+    
+    
+
 
 FROM base AS build
 
@@ -39,6 +50,7 @@ RUN apt-get -y update && apt-get install -y \
     binutils-aarch64-linux-gnu \
     curl \
     gcc-mips-linux-gnu \
+    qemu-user\
     git \
     libnl-route-3-200 \
     libprotobuf-dev \
