--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,11 +34,10 @@ RUN git clone "https://github.com/google/nsjail" --recursive --branch 3.1 /nsjai
 ENV QEMU_LD_PREFIX=/tmp/ido_root
 RUN git clone "https://github.com/LLONSIT/qemu-irix-helpers" --recursive --branch master /helpers \
      && cp /helpers/qemu/qemu-mips.conf /usr/lib/binfmt.d && \
-     systemctl restart systemd-binfmt &&\
     wget https://github.com/n64decomp/qemu-irix/releases/download/v2.11-deb/qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
     dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
     wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && tar xpvf ido_root.tar.xz -C /tmp/ &&\
-    touch dummy.c && QEMU_LD_PREFIX=/tmp/ido_root/ /tmp/ido_root/usr/bin/cc -c dummy.c && \
+    touch dummy.c && QEMU_LD_PREFIX=/tmp/ido_root/ /tmp/ido_root/usr/bin/cc -c dummy.c 
     
     
 
