--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,36 @@ FROM ubuntu:20.04 as base
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+ENV container docker
+
+
+# Enable systemd.
+RUN apt-get update ; \
+    apt-get install -y systemd systemd-sysv ; \
+    apt-get clean ; \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* ; \
+    cd /lib/systemd/system/sysinit.target.wants/ ; \
+    ls | grep -v systemd-tmpfiles-setup | xargs rm -f $1 ; \
+    rm -f /lib/systemd/system/multi-user.target.wants/* ; \
+    rm -f /etc/systemd/system/*.wants/* ; \
+    rm -f /lib/systemd/system/local-fs.target.wants/* ; \
+    rm -f /lib/systemd/system/sockets.target.wants/*udev* ; \
+    rm -f /lib/systemd/system/sockets.target.wants/*initctl* ; \
+    rm -f /lib/systemd/system/basic.target.wants/* ; \
+    rm -f /lib/systemd/system/anaconda.target.wants/* ; \
+    rm -f /lib/systemd/system/plymouth* ; \
+    rm -f /lib/systemd/system/systemd-update-utmp*
+
+VOLUME [ "/sys/fs/cgroup" ]
+
+CMD ["/lib/systemd/systemd"]
+
 RUN apt-get update && apt-get install -y \
     python3-pip \
     python3 \
     python-is-python3 \
     python3.9-venv \
     python3.9-dev \
-    systemd \
     wget
 
 
