--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,6 +181,7 @@ jobs:
             --security-opt apparmor=unconfined \
             --security-opt seccomp=unconfined \
             --entrypoint /bin/bash \
+            --privileged\
             -e COMPILER_BASE_PATH=/compilers \
             -e WINEPREFIX=/tmp/wine \
             -e LOCAL_FILE_DIR=/local_files \
@@ -188,7 +189,6 @@ jobs:
             -e SANDBOX_DISABLE_PROC=true \
             -e TIMEOUT_SCALE_FACTOR=10 \
             -e QEMU_LD_PREFIX=/tmp/ido_root \
-            --privileged\ #systemd
             decompme_backend -c 'systemctl restart systemd-binfmt && cd /decomp.me/backend && \
             poetry install && \
             poetry run python manage.py test'
