--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,7 +189,7 @@ jobs:
             -e SANDBOX_DISABLE_PROC=true \
             -e TIMEOUT_SCALE_FACTOR=10 \
             -e QEMU_LD_PREFIX=/tmp/ido_root \
-            decompme_backend -c 'ps && cd /decomp.me/backend && \
+            decompme_backend -c 'echo $QEMU_LD_PREFIX && cd /decomp.me/backend && \
             poetry install && \
             poetry run python manage.py test'
 
