--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,6 +178,7 @@ jobs:
           docker run \
             -v $(pwd):/decomp.me \
             -v $(pwd)/local_files:/local_files \
+            -v /ido_root:/ido_root \
             --security-opt apparmor=unconfined \
             --security-opt seccomp=unconfined \
             --entrypoint /bin/bash \
@@ -189,7 +190,7 @@ jobs:
             -e TIMEOUT_SCALE_FACTOR=10 \
             -e QEMU_LD_PREFIX=/ido_root \
             -e RUNNING_IN_DOCKER=1\
-            decompme_backend -c 'echo $QEMU_LD_PREFIX && echo $RUNNING_IN_DOCKER && ls /tmp/ido_root && cd /decomp.me/backend && \
+            decompme_backend -c 'echo $QEMU_LD_PREFIX && echo $RUNNING_IN_DOCKER && ls /ido_root && cd /decomp.me/backend && \
             poetry install && \
             poetry run python manage.py test'
 
