--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
           sudo systemctl restart systemd-binfmt
           wget https://github.com/n64decomp/qemu-irix/releases/download/v2.11-deb/qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
           sudo dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb
-          wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && tar xpvf ido_root.tar.xz -C /
+          sudo wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && sudo tar xpvf ido_root.tar.xz -C /
           touch dummy.c && QEMU_LD_PREFIX=/ido_root/ /ido_root/usr/bin/cc -c dummy.c
         
         env:
