Fix dosemu setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -70,8 +70,9 @@ RUN if [ "${ENABLE_NDS_SUPPORT}" = "YES" ] || \
 
 # ps1 specifics
 RUN if [ "${ENABLE_PS1_SUPPORT}" = "YES" ] ; then \
-    apt-get install -y dos2unix && \
-    apt-get install -y software-properties-common && \
+    apt-get update && \
+    apt-get install -y -o APT::Immediate-Configure=false \
+        dos2unix software-properties-common && \
     add-apt-repository -y ppa:dosemu2/ppa && \
     apt-get update && \
     apt-get install -y dosemu2; \
