--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,18 +98,6 @@ jobs:
         run: |-
           wget https://github.com/decompals/WiBo/releases/download/0.2.4/wibo && chmod +x wibo && sudo cp wibo /usr/bin/
 
-      - name: Install irix-binfmt-scripts
-        run: |-
-          git clone https://github.com/LLONSIT/qemu-irix-helpers && sudo cp qemu-irix-helpers/qemu/qemu-mips.conf /usr/lib/binfmt.d/ && \
-          sudo systemctl restart systemd-binfmt
-          wget https://github.com/n64decomp/qemu-irix/releases/download/v2.11-deb/qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb &&\
-          sudo dpkg -i qemu-irix-2.11.0-2169-g32ab296eef_amd64.deb
-          sudo wget https://github.com/LLONSIT/qemu-irix-helpers/raw/n/qemu/ido_root.tar.xz && sudo tar xpvf ido_root.tar.xz -C /
-          touch dummy.c && QEMU_LD_PREFIX=/ido_root/ /ido_root/usr/bin/cc -c dummy.c
-        
-        env:
-            QEMU_LD_PREFIX: /ido_root
-        
       - name: Run backend tests
         run: |-
           mkdir -p "${WINEPREFIX}"
@@ -180,11 +168,9 @@ jobs:
         run: |-
           mkdir -p sandbox && chmod 777 sandbox
           mkdir -p local_files && chmod 777 local_files
-          #ls /ido_root
           docker run \
             -v $(pwd):/decomp.me \
             -v $(pwd)/local_files:/local_files \
-            -v /ido_root:/ido_root \
             --security-opt apparmor=unconfined \
             --security-opt seccomp=unconfined \
             --entrypoint /bin/bash \
@@ -196,7 +182,7 @@ jobs:
             -e TIMEOUT_SCALE_FACTOR=10 \
             -e QEMU_LD_PREFIX=/ido_root \
             -e RUNNING_IN_DOCKER=1\
-            decompme_backend -c 'echo $QEMU_LD_PREFIX && echo $RUNNING_IN_DOCKER && cd /decomp.me/backend && \
+            decompme_backend -c 'cd /decomp.me/backend && \
             poetry install && \
             poetry run python manage.py test'
 
