--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
         "clean": "rm -rf .next node_modules"
     },
     "dependencies": {
-        "@codemirror/autocomplete": "^6.4.0",
+        "@codemirror/autocomplete": "^6.4.2",
         "@codemirror/commands": "^6.1.2",
         "@codemirror/lang-cpp": "^6.0.2",
         "@codemirror/language": "^6.3.1",
@@ -18,6 +18,7 @@
         "@codemirror/search": "^6.2.3",
         "@codemirror/state": "^6.1.4",
         "@codemirror/view": "^6.7.0",
+        "@lezer/common": "^1.0.2",
         "@lezer/highlight": "^1.1.3",
         "@primer/octicons-react": "^17.2.0",
         "@radix-ui/colors": "^0.1.8",
@@ -28,12 +29,12 @@
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.1",
         "codemirror": "^6.0.1",
-        "dequal": "^2.0.2",
+        "dotenv": "^16.0.3",
         "downshift": "^6.1.7",
         "fast-myers-diff": "^3.0.1",
         "framer-motion": "^6.3.5",
         "is-dark-color": "^1.2.0",
-        "next": "^13.1.1",
+        "next": "^13.2.4",
         "next-plausible": "^3.1.4",
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
@@ -46,12 +47,11 @@
         "react-virtualized-auto-sizer": "^1.0.6",
         "react-window": "^1.8.6",
         "sass": "^1.42.1",
-        "sharp": "^0.30.6",
+        "sharp": "^0.31.3",
         "swr": "^1.3.0",
         "use-debounce": "^8.0.1",
-        "use-deep-compare-effect": "^1.6.1",
         "use-persisted-state": "^0.3.3",
-        "webpack-virtual-modules": "^0.4.5"
+        "webpack-virtual-modules": "^0.5.0"
     },
     "devDependencies": {
         "@babel/core": "^7.17.8",
@@ -69,9 +69,8 @@
         "babel-loader": "^8.2.4",
         "css-loader": "^6.4.0",
         "cssnano": "^5.0.7",
-        "dotenv": "^16.0.1",
         "eslint": "8.16.0",
-        "eslint-config-next": "^13.1.1",
+        "eslint-config-next": "^13.2.4",
         "eslint-formatter-rdjson": "^1.0.5",
         "eslint-plugin-css-modules": "^2.11.0",
         "eslint-plugin-react": "^7.26.1",
@@ -87,9 +86,9 @@
         "stylelint": "^14.16.0",
         "stylelint-config-css-modules": "^4.1.0",
         "stylelint-config-standard-scss": "^6.1.0",
-        "tailwindcss": "^3.2.4",
-        "typescript": "^4.9.4",
-        "webpack": "5"
+        "tailwindcss": "^3.2.7",
+        "typescript": "^4.9.5",
+        "webpack": "^5.76.2"
     },
     "browserslist": [
         "last 2 versions and not dead and >= 1% and supports async-functions"
